Final bug fixes to pizza website

--- a/aboutus.html
+++ b/aboutus.html
@@ -28,6 +28,7 @@
     <section class="heading-section">
         <h1 class="aboutus-title">─ A Little About Us ─</h1>
     </section>
+    <!-- two-column design beginning -->
     <section class="two-column">
     <div class="image">
         <img class="secondary-image" src="./Pizza Images/GettyImages-1380534040.webp" alt="Italy scenery">
@@ -38,6 +39,8 @@
 Did you know, our team has been going around a trip in Italy for the past 5 years (except 2020 due to the COVID-19 pandemic)? And yes, we loved the delicious food they have prepared and their culture in general too! We strive to offer this experience inside our local area to give the authentic feel of Italian Pizzas! 
         </p>
     </section>
+    <!-- two-column design end -->
+    <!-- two-column design beginning -->
     <section class="two-column">
     <div class="image">
         <img class="secondary-image" src="./Pizza Images/CH_BAD_ROMAN_NYC_ROUND_1_020323952A.webp" alt="Italian greeting">
@@ -48,6 +51,7 @@ Did you know, our team has been going around a trip in Italy for the past 5 year
         </p>
     </div>
     </section>
+    <!-- two-column design end -->
     
     <!-- sticky footer -->
     <footer>
