--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <title>Messiano's Pizzeria</title>
     </span>
 </head>
-<body>
+<body class="default-background">
     <!-- sticky header -->
     <header>
         <a href="index.html" class="my-button">
@@ -25,8 +25,6 @@
         </a>
     </header>
 
-    <!-- filler -->
-    <section class="filler"></section>
     <section class="hero-title-image" alt="pizzeria kitchen">
         <h1 class="hero-text">
             ──── Messiano's Pizzeria ────
@@ -44,8 +42,6 @@
         </div>
     </section>
     <!-- two column design ending -->
-    <!-- filler -->
-    <section class="filler"></section>
 
     <!-- sticky footer -->
     <footer>
