--- a/margherita.html
+++ b/margherita.html
@@ -26,6 +26,7 @@
     </header>
 
     <section class="three-column-details">
+        <!-- exit button -->
         <div>
             <a href="menu.html" class="exit-button">
                 Exit
@@ -33,9 +34,10 @@
         </div>
         <h1 class="menu-details">Neapolitan Margherita</h1>
         <div>
-            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Cheese">
+            <img src="./Pizza Images/Authentic-Neapolitan-Pizza-Dough-Recipe-45.jpg" alt="Margherita">
         </div>
     </section>
+    <!-- product details -->
     <section>
         <div>
             <h3>Description</h3>
