--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,7 @@
         <title>Messiano’s Pizzeria - Menu</title>
     </span>
 </head>
-<body>
+<body class="default-background">
     <!-- sticky header -->
     <header>
         <a href="index.html" class="my-button">
@@ -25,17 +25,14 @@
         </a>
     </header>
 
-    <!-- filler -->
-    <section class="filler"></section>
-
     <section class="hero-image">
         <h1 class="hero-text-menu">
             ──── Food Menu Showcase ────
         </h1>
     </section>
     <section class="heading-section">
-        <h3 class="stores-note-text">Important note:</h3>
-        <h3 class="stores-note-text">
+        <h3 class="important-note-text">Important note:</h3>
+        <h3 class="important-note-text">
             As of 2025, only Pizzas and Pastas get information pages due to being mainstream menu items. Information pages for other menu items are coming soon in 2026.
     </section>
     <section class="heading-section">
