--- a/stores.html
+++ b/stores.html
@@ -8,7 +8,7 @@
         <title>Messiano’s Pizzeria - Stores</title>
     </span>
 </head>
-<body>
+<body class="default-background">
     <header>
         <a href="index.html" class="my-button">
             Home
@@ -24,36 +24,33 @@
         </a>
     </header>
 
-    <!-- filler -->
-    <section class="filler"></section>
-
     <section class="hero-image">
         <h1 class="hero-text-menu">
             ──── Stores ────
         </h1>
     </section>
     <section class="heading-section">
-        <h3 class="stores-note-text">Important note:</h3>
-        <h3 class="stores-note-text">
+        <h3 class="important-note-text">Important note:</h3>
+        <h3 class="important-note-text">
             The following location images are placeholders for areas in Christchurch that our pizza company would be expected to open shops in, please note this may change in the future and we'll keep you updated.
         </h3>
     </section>
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 9.36.20 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 9.36.20 PM.png" alt="Burnside">
             <div class="card">   
                 <h2 class="card-text">Burnside</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.08.07 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.08.07 PM.png" alt="Bishopdale">
             <div class="card">   
                 <h2 class="card-text">Bishopdale</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.08.44 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.08.44 PM.png" alt="Avonhead">
             <div class="card">   
                 <h2 class="card-text">Avonhead</h2>
             </div>
@@ -63,19 +60,19 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.09.11 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.09.11 PM.png" alt="Ilam">
             <div class="card">   
                 <h2 class="card-text">Ilam</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.09.29 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.09.29 PM.png" alt="St. Albans">
             <div class="card">   
                 <h2 class="card-text">St. Albans</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.10.07 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.10.07 PM.png" alt="Papanui">
             <div class="card">   
                 <h2 class="card-text">Papanui</h2>
             </div>
@@ -85,19 +82,19 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.10.39 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.10.39 PM.png" alt="New Brighton">
             <div class="card">   
                 <h2 class="card-text">New Brighton</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.00 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.00 PM.png" alt="Wigram">
             <div class="card">   
                 <h2 class="card-text">Wigram</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.23 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.23 PM.png" alt="Belfast">
             <div class="card">   
                 <h2 class="card-text">Belfast</h2>
             </div>
@@ -107,19 +104,19 @@
     <!-- three column design beginning -->
     <section class="three-column-menu">
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.39 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.12.39 PM.png" alt="Riccarton">
             <div class="card">
                 <h2 class="card-text">Riccarton</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.27.02 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.27.02 PM.png" alt="Fendalton">
             <div class="card">   
                 <h2 class="card-text">Fendalton</h2>
             </div>
         </div>
         <div>
-            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.27.33 PM.png">
+            <img src="./Pizza Images/Screenshot 2025-09-17 at 8.27.33 PM.png" alt="Christchurch City Centre">
             <div class="card">   
                 <h2 class="card-text">Christchurch City Centre</h2>
             </div>
