--- a/fusilli.html
+++ b/fusilli.html
@@ -26,6 +26,7 @@
     </header>
 
     <section class="three-column-details">
+        <!-- exit button -->
         <div>
             <a href="menu.html" class="exit-button">
                 Exit
@@ -33,9 +34,10 @@
         </div>
         <h1 class="menu-details">Fusilli</h1>
         <div>
-            <img src="./Pizza Images/images (13).jpeg" alt="Spaghetti">
+            <img src="./Pizza Images/images (13).jpeg" alt="fusilli">
         </div>
     </section>
+    <!-- product details -->
     <section>
         <div>
             <h3>Nutritional Values</h3>
