--- a/hamandcheese.html
+++ b/hamandcheese.html
@@ -26,6 +26,7 @@
     </header>
 
     <section class="three-column-details">
+        <!-- exit button -->
         <div>
             <a href="menu.html" class="exit-button">
                 Exit
@@ -36,6 +37,7 @@
             <img src="./Pizza Images/HAMANDTWOCHEESE.webp" alt="hamandcheese">
         </div>
     </section>
+    <!-- product details -->
     <section>
         <div>
             <h3>Description</h3>
