--- a/pepperoni.html
+++ b/pepperoni.html
@@ -26,6 +26,7 @@
     </header>
 
     <section class="three-column-details">
+        <!-- exit button -->
         <div>
             <a href="menu.html" class="exit-button">
                 Exit
@@ -36,6 +37,7 @@
             <img src="./Pizza Images/Pepperoni-pizza-850x630-1-585x400-1.jpg" alt="Pepperoni">
         </div>
     </section>
+    <!-- product details -->
     <section>
         <div>
             <h3>Description</h3>
