--- a/spaghetti.html
+++ b/spaghetti.html
@@ -26,6 +26,7 @@
     </header>
 
     <section class="three-column-details">
+        <!-- exit button -->
         <div>
             <a href="menu.html" class="exit-button">
                 Exit
@@ -36,6 +37,7 @@
             <img src="./Pizza Images/images (11).jpeg" alt="Spaghetti">
         </div>
     </section>
+    <!-- product details -->
     <section>
         <div>
             <h3>Nutritional Values</h3>
