--- a/stores.html
+++ b/stores.html
@@ -32,7 +32,7 @@
     <section class="heading-section">
         <h3 class="important-note-text">Important note:</h3>
         <h3 class="important-note-text">
-            The following location images are placeholders for areas in Christchurch that our pizza company would be expected to open shops in, please note this may change in the future and we'll keep you updated.
+            The following location images are placeholders for areas in Christchurch that our pizza company would be expected to open shops in and buttons are not functional. Please note this may change in the future and we'll keep you updated.
         </h3>
     </section>
     <!-- three column design beginning -->
